--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
       <title>{Site Name}</title>
       <link rel="stylesheet" type="text/css" href="/assets/css/base.css" media="screen, projection">
       <link rel="stylesheet" type="text/css" href="/assets/css/blueprint/print.css" media="print">
-      <!--
-      //http://www.quirksmode.org/css/condcom.html
-      -->
+      <!--http://www.quirksmode.org/css/condcom.html-->
       <!--[if IE]><link rel="stylesheet" href="/assets/css/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
    </head>
    <body>
@@ -32,10 +30,8 @@
       <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
       <script type="text/javascript" src="/assets/javascripts/application.js"></script>
       <script type="text/javascript" src="/assets/javascripts/utils.js"></script>
-      <!--[if lt IE 8]>
-         //http://dean.edwards.name/weblog/2008/01/ie7-2/
-         <script src="http://ie7-js.googlecode.com/svn/version/2.0(beta3)/IE8.js" type="text/javascript"></script>
-      <![endif]-->
+      <!--//http://dean.edwards.name/weblog/2008/01/ie7-2/-->
+      <!--[if lt IE 8]><script src="http://ie7-js.googlecode.com/svn/version/2.0(beta3)/IE8.js" type="text/javascript"></script><![endif]-->
       
       <!--
          Remove if there is no need for swfobject
