--- a/index.html
+++ b/index.html
@@ -56,5 +56,37 @@
             });
          }         
       </script>
+		
+		<div id="container">
+			<div id="header">
+				<div id="meta"></div>
+				<div id="logo">
+					<h1>Client Name</h1>
+					<h2>Motto/subheading/mantra/etc</h2>
+				</div>
+				<div id="nav">
+					<ul>
+						<li><a href="#" title="">Link 1</a></li>
+						<li><a href="#" title="">Link 1</a></li>
+						<li><a href="#" title="">Link 1</a></li>
+						<li><a href="#" title="">Link 1</a></li>
+						<li><a href="#" title="">Link 1</a></li>
+					</ul>
+				</div><!-- closing nav -->
+			</div><!-- closing header -->
+			<div id="content">
+				<div id="main">
+					<h3>h3: Main Content</h3>
+					<p>Sample paragraph inside main</p>
+				</div><!-- closing main -->
+				<div id="sidebar">
+					<h3>h3: Sidebar</h3>
+					<p>Sample paragraph inside sidebar</p>
+				</div><!-- closing sidebar -->
+			</div><!-- closing content -->
+			<div id="footer">
+				<p>Sample paragraph inside footer</p>
+			</div>
+		</div><!-- closing container -->
    </body>
 </html>
