git-svn-id: http://svn.blueatlas.com/repos/blueplate/trunk@16 1b612556-4205-11dd-95e7-d3cce41f8d93

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 * @modifiedby		$LastChangedBy$
 * @lastmodified	$Date$
 */
---> <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+-->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -57,7 +58,7 @@
          }         
       </script>
 		
-		<div id="container">
+		<div id="container" class="span-19">
 			<div id="header">
 				<div id="meta"></div>
 				<div id="logo">
