--- a/index.html
+++ b/index.html
@@ -20,7 +20,21 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="title" content="" />
+        <meta name="description" content="" />
+        <meta name="keywords" content="" />         
+        <meta http-equiv="Content-Language" content="en-us" />
+        <meta name="author" content="Blue Atlas Interactive" />
+        <meta name="copyright" content="http://blueatlas.com" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+        <meta name="ICBM" content="lat, long" />
+        <meta name="geo.position" content="lat, long" />
+        <meta name="geo.placename" content="city, state" />
+        <meta name="geo.region" content="US-MD" />
+        <meta name="geo.country" content="US" />
+
         <title>{Site Name}</title>
+        
         <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.5.2/build/reset-fonts-grids/reset-fonts-grids.css" media="screen, projection">
         <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.5.2/build/base/base-min.css" media="screen, projection">
         <link rel="stylesheet" type="text/css" href="/assets/css/base.css" media="screen, projection">
