Renamed full to yui-full

--- a/yui-full/assets/documentation/styleguide.html
+++ b/yui-full/assets/documentation/styleguide.html
@@ -1,10 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML PUBLIC ../W../DTD HTML 4.../EN" "htt../www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>{Site Name} Style Guide</title>
-        <link rel="stylesheet" type="text/css" href="/assets/css/base.css" media="screen, projection">
-        <link rel="stylesheet" type="text/css" href="/assets/css/print.css" media="print">
+        <link rel="stylesheet" type="text/css" href="../css/base.css" media="screen, projection">
+        <link rel="stylesheet" type="text/css" href="../css/print.css" media="print">
     </head>
     <body>
         <div id="doc">
@@ -127,21 +127,21 @@
                     </p>
                     <h3>Paragraphs with Images</h3>
                     <p>
-                        <img src="/assets/images/bg/pic.gif" alt="Alternative text">Quisque placerat. Donec et nunc et mauris convallis bibendum. <strong>Donec eu diam sodales</strong>
+                        <img src="../images/bg/pic.gif" alt="Alternative text">Quisque placerat. Donec et nunc et mauris convallis bibendum. <strong>Donec eu diam sodales</strong>
                         felis sagittis volutpat. <em>Suspendisse fermentum condimentum sem. Nulla facilisi. Integer nec dui.</em>
                         Pellentesque sodales justo sit amet erat. Nulla feugiat, <a href="/">libero in consectetuer luctus, velit enim placerat arcu</a>, tempor auctor nisl nunc non est. Praesent non dui. Sed lacus lectus, dapibus eu, dapibus ac, euismod nec, metus.
                     </p>
                     <div class="clear">
                     </div>
                     <p>
-                        <img src="/assets/images/bg/pic.gif" alt="Alternative text" class="right">Quisque placerat. Donec et nunc et mauris convallis bibendum. <strong>Donec eu diam sodales</strong>
+                        <img src="../images/bg/pic.gif" alt="Alternative text" class="right">Quisque placerat. Donec et nunc et mauris convallis bibendum. <strong>Donec eu diam sodales</strong>
                         felis sagittis volutpat. <em>Suspendisse fermentum condimentum sem. Nulla facilisi. Integer nec dui.</em>
                         Pellentesque sodales justo sit amet erat. Nulla feugiat, <a href="/">libero in consectetuer luctus, velit enim placerat arcu</a>, tempor auctor nisl nunc non est. Praesent non dui. Sed lacus lectus, dapibus eu, dapibus ac, euismod nec, metus.
                     </p>
                     <div class="clear">
                     </div>
                     <p>
-                        <img src="/assets/images/bg/pic.gif" alt="Alternative text"><img src="/assets/images/bg/pic.gif" alt="Alternative text" class="right">Quisque placerat. Donec et nunc et mauris convallis bibendum. <strong>Donec eu diam sodales</strong>
+                        <img src="../images/bg/pic.gif" alt="Alternative text"><img src="../images/bg/pic.gif" alt="Alternative text" class="right">Quisque placerat. Donec et nunc et mauris convallis bibendum. <strong>Donec eu diam sodales</strong>
                         felis sagittis volutpat. <em>Suspendisse fermentum condimentum sem. Nulla facilisi. Integer nec dui.</em>
                         Pellentesque sodales justo sit amet erat. Nulla feugiat, <a href="/">libero in consectetuer luctus, velit enim placerat arcu</a>, tempor auctor nisl nunc non est. Praesent non dui. Sed lacus lectus, dapibus eu, dapibus ac, euismod nec, metus.
                     </p>
