--- a/yui-full/assets/documentation/layoutguide.html
+++ b/yui-full/assets/documentation/layoutguide.html
@@ -3,8 +3,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>{Site Name} Layout Guide</title>
-        <link rel="stylesheet" type="text/css" href="/assets/css/base.css" media="screen, projection">
-        <link rel="stylesheet" type="text/css" href="/assets/css/print.css" media="print">
+        <link rel="stylesheet" type="text/css" href="../css/base.css" media="screen, projection">
+        <link rel="stylesheet" type="text/css" href="../css/print.css" media="print">
     </head>
     <body>
         <div id="doc">
