--- a/yui-full/index.html
+++ b/yui-full/index.html
@@ -17,8 +17,8 @@
 
         <title>{Site Name}</title>
         
-        <link rel="stylesheet" type="text/css" href="/assets/css/base.css" media="screen, projection">
-        <link rel="stylesheet" type="text/css" href="/assets/css/print.css" media="print">
+        <link rel="stylesheet" type="text/css" href="assets/css/base.css" media="screen, projection">
+        <link rel="stylesheet" type="text/css" href="assets/css/print.css" media="print">
     </head>
     <body>
         <div id="doc" class="yui-t5">
@@ -60,13 +60,13 @@
                         <div class="pad">
                             <h2>h2: Main Content</h2>
                             <p>
-                                <img src="/assets/images/bg/100.jpg" alt="A test jpg" title="Test Jpg">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Vivamus sollicitudin risus. In non velit et tellus tincidunt sagittis. Vestibulum interdum tincidunt tortor. Duis iaculis feugiat dui. Duis fermentum. Nam ullamcorper mi nec nulla. Curabitur congue fringilla lacus. Nam id neque tincidunt sem porta luctus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam feugiat ornare lacus. 
+                                <img src="assets/images/bg/100.jpg" alt="A test jpg" title="Test Jpg">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Vivamus sollicitudin risus. In non velit et tellus tincidunt sagittis. Vestibulum interdum tincidunt tortor. Duis iaculis feugiat dui. Duis fermentum. Nam ullamcorper mi nec nulla. Curabitur congue fringilla lacus. Nam id neque tincidunt sem porta luctus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam feugiat ornare lacus. 
                             </p>
                             <p>
-                                <img src="/assets/images/bg/pic.gif" alt="A test gif" title="Test Gif" class="right">Maecenas fringilla porttitor lacus. Pellentesque interdum. Aenean viverra, lacus eu tristique rhoncus, nulla nunc blandit erat, ut pellentesque neque odio consequat urna. Mauris porta lacus in nulla. Aenean odio nibh, pharetra in, malesuada sed, iaculis ut, sem. Donec posuere. Vivamus cursus tellus ac tortor. Duis sed nunc. Vestibulum bibendum. Quisque metus nibh, iaculis ac, lacinia vel, rhoncus et, justo. Curabitur non massa ac dolor feugiat malesuada. Aliquam suscipit. Aliquam consectetuer, erat nec luctus ornare, leo nisi faucibus tortor, vitae vestibulum ligula est eget arcu. Integer ultrices gravida nisi. Vestibulum elementum diam in eros. Mauris tellus massa, feugiat eu, consequat sit amet, tincidunt et, nisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas dolor. Sed eu ipsum. Mauris sit amet diam. 
+                                <img src="assets/images/bg/pic.gif" alt="A test gif" title="Test Gif" class="right">Maecenas fringilla porttitor lacus. Pellentesque interdum. Aenean viverra, lacus eu tristique rhoncus, nulla nunc blandit erat, ut pellentesque neque odio consequat urna. Mauris porta lacus in nulla. Aenean odio nibh, pharetra in, malesuada sed, iaculis ut, sem. Donec posuere. Vivamus cursus tellus ac tortor. Duis sed nunc. Vestibulum bibendum. Quisque metus nibh, iaculis ac, lacinia vel, rhoncus et, justo. Curabitur non massa ac dolor feugiat malesuada. Aliquam suscipit. Aliquam consectetuer, erat nec luctus ornare, leo nisi faucibus tortor, vitae vestibulum ligula est eget arcu. Integer ultrices gravida nisi. Vestibulum elementum diam in eros. Mauris tellus massa, feugiat eu, consequat sit amet, tincidunt et, nisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas dolor. Sed eu ipsum. Mauris sit amet diam. 
                             </p>
                             <p>
-                                <img src="/assets/images/bg/test.jpg" alt="A test jpg" title="Raul Ortiz">Nullam nunc. Sed sed turpis id dolor blandit vehicula. Nulla luctus. Praesent euismod nulla in orci. Phasellus mattis mi ut urna. Nam aliquet iaculis tortor. Donec bibendum, nulla id sagittis malesuada, enim felis auctor tellus, in eleifend diam dui quis purus. Sed tellus quam, commodo sit amet, vestibulum sed, tempor in, elit. Ut ante ante, mattis quis, fringilla in, rutrum eget, mi. Fusce consequat, tortor eu egestas porttitor, urna nisl scelerisque odio, quis auctor mi massa sagittis orci. Curabitur mauris. Mauris lacinia. Duis cursus, erat nec interdum vulputate, dui erat sollicitudin turpis, vitae pulvinar velit tellus a tortor. 
+                                <img src="assets/images/bg/test.jpg" alt="A test jpg" title="Raul Ortiz">Nullam nunc. Sed sed turpis id dolor blandit vehicula. Nulla luctus. Praesent euismod nulla in orci. Phasellus mattis mi ut urna. Nam aliquet iaculis tortor. Donec bibendum, nulla id sagittis malesuada, enim felis auctor tellus, in eleifend diam dui quis purus. Sed tellus quam, commodo sit amet, vestibulum sed, tempor in, elit. Ut ante ante, mattis quis, fringilla in, rutrum eget, mi. Fusce consequat, tortor eu egestas porttitor, urna nisl scelerisque odio, quis auctor mi massa sagittis orci. Curabitur mauris. Mauris lacinia. Duis cursus, erat nec interdum vulputate, dui erat sollicitudin turpis, vitae pulvinar velit tellus a tortor. 
                             </p>
                             <p>
                                 Quisque placerat. Donec et nunc et mauris convallis bibendum. Donec eu diam sodales felis sagittis volutpat. Suspendisse fermentum condimentum sem. Nulla facilisi. Integer nec dui. Pellentesque sodales justo sit amet erat. Nulla feugiat, libero in consectetuer luctus, velit enim placerat arcu, tempor auctor nisl nunc non est. Praesent non dui. Sed lacus lectus, dapibus eu, dapibus ac, euismod nec, metus.
@@ -93,8 +93,8 @@
         </div><!-- closing doc -->
         
         <!--http://developer.yahoo.com/performance/rules.html#js_bottom-->
-        <script src="/assets/javascripts/jquery/jquery.min.js"></script>
-        <script src="/assets/javascripts/application.js"></script>
+        <script src="assets/javascripts/jquery/jquery.min.js"></script>
+        <script src="assets/javascripts/application.js"></script>
 
         <script type="text/javascript">
             //A quick check to see if we are on a page that requires flash replacement
@@ -103,7 +103,7 @@
                 //jquery specific code here.  If not including the jquery library in a project this
                 //will need modification/removal.  Also, thought will need to be put into the instance
                 //when there are multiple swf files that need to be served throughout the site
-                $.getScript("/javascripts/swfobject/swfobject.js", function(){
+                $.getScript("javascripts/swfobject/swfobject.js", function(){
                     var flashvars = {};
                     var params = {
                         allowFullScreen: 'true',
