Added separate utils js file
Updated modules

--- a/yui-full/threecol.html
+++ b/yui-full/threecol.html
@@ -119,6 +119,7 @@
         
         <!--http://developer.yahoo.com/performance/rules.html#js_bottom-->
         <script src="assets/javascripts/jquery/jquery.min.js"></script>
+        <script src="assets/javascripts/utils.js"></script>
         <script src="assets/javascripts/application.js"></script>
 
         <script type="text/javascript">
