--- a/960-full/index.html
+++ b/960-full/index.html
@@ -90,6 +90,7 @@
         
         <!--http://developer.yahoo.com/performance/rules.html#js_bottom-->
         <script src="assets/javascripts/jquery/jquery.min.js"></script>
+        <script src="assets/javascripts/utils.js"></script>
         <script src="assets/javascripts/application.js"></script>
 
         <script type="text/javascript">
