--- a/yui-full/assets/documentation/styleguide.html
+++ b/yui-full/assets/documentation/styleguide.html
@@ -1,8 +1,9 @@
-<!DOCTYPE HTML PUBLIC ../W../DTD HTML 4.../EN" "htt../www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>{Site Name} Style Guide</title>
+        <link rel="stylesheet" type="text/css" href="../css/tools.css" media="screen, projection">
         <link rel="stylesheet" type="text/css" href="../css/base.css" media="screen, projection">
         <link rel="stylesheet" type="text/css" href="../css/print.css" media="print">
     </head>
